Fixes UI Association title/text spacing

--- a/app/assets/stylesheets/georgia/components/_portlet.scss
+++ b/app/assets/stylesheets/georgia/components/_portlet.scss
@@ -6,7 +6,10 @@
     float: left;
     margin: 0 15px;
   }
-  .title { margin: 0; }
+  .title {
+    margin: 0;
+    small { margin-left: 10px; }
+  }
   .actions {
     float: right;
   }
